--- a/ProteinTrackerTest/.classpath
+++ b/ProteinTrackerTest/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/TestAutomation/Resources/selenium-server-standalone-3.5.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
